Bug 388155 - Text in nickname column wrapped too aggressively r=silver@warwickcompsoc.co.uk (James Ross) ChatZilla Only. NPOTFFB.

--- a/extensions/irc/xul/content/output-base.css
+++ b/extensions/irc/xul/content/output-base.css
@@ -496,6 +496,7 @@ a.chatzilla-link:hover {
 .msg-user {                                 /* msg-user = nickname portion of */
     text-align: right;                      /* a message (channel and query   */
     vertical-align: top;                    /* views)                         */
+    white-space: nowrap;
 }
 
 .msg-data {                                 /* .msg-data = the text portion   */
